--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {box-sizing: border-box;
+  margin:0;
+  padding: 0;}
+
 .row {
   width: 992px;
   margin-left: auto;
@@ -64,4 +68,31 @@ img{
 
 .clear {
   clear:both;
+}
+
+@media screen and (max-width:780px) {
+.row{width: 100%;
+margin-top: 0;
+}
+
+#lezioni .row > .left, #lezioni .row > .right{width: 100%;
+}
+
+#steps .row > .left,
+#steps .row > .central,
+#steps .row > .right{
+width: 100%;
+}
+
+p, h3{font-size: 20px;
+  margin: 10px 0;
+}
+
+
+#why .row > .first,
+#why .row > .second,
+#why .row > .third {
+  margin-top: 10px;
+}
+
 }
